static/css/stylesheet.css
/* ... */
nav#types {
    padding: 2rem;
    background: var(--blue-grey-100);
}

#nav-types-container {
    padding: 2rem;
    background: var(--grey-50);
    border-radius: 2rem;
}

#nav-types-container h2 {
    margin: 0 0 1rem 0;
    padding: 0 0 1.5rem 0;
    font-family: var(--sans-serif-header);
    font-weight: 500;
    font-size: 2rem;
    color: var(--blue-grey-900);
    border-bottom: 0.1rem solid var(--blue-grey-50);
}

#nav-types-container ul {
    padding: 1rem 0 1rem 0;
}

#nav-types-container li {
    margin: 0 0.25rem 1rem 0;
    display: inline-block;
    font-family: var(--sans-serif);
    font-size: 1.4rem;
}

#type-bar {
    height: 1rem;
}

aside#archive-toc {
    padding: 2rem;
    background: var(--blue-grey-50);
}

#aside-archive-toc-container {
    padding: 2rem;
    background: var(--white);
    font-size: 1.6rem;
    border-radius: 2rem;
}

#aside-archive-toc-container ul {
    margin: 0 0 0 1rem;
}

main#entries {
    padding: 2rem;
    background: var(--blue-grey-50);
}

#main-entries-container {
    padding: 2rem;
    background: var(--white);
    border-radius: 2rem;
}

.section-title {
    display: flex;
    align-items: center;
    margin: 0 0 1.5rem 0;
    border-bottom: 0.1rem solid var(--blue-grey-50);
}

.count {
    padding: 0 0 1.5rem 0;
    font-size: 1.4rem;
}

#main-entries-container h2 {
    padding: 0 0 1.5rem 0;
    flex-grow: 1;
    font-family: var(--sans-serif-header);
    font-weight: 500;
    font-size: 2rem;
    color: var(--blue-grey-900);
}

#main-entries-container li {
    margin: 0 0 1rem 0;
    padding: 2rem;
    background: var(--grey-50);
    border-radius: 2rem;
}

#main-entries-container li h3 {
    padding: 0 0 0.5rem 0;
    font-family: var(--sans-serif);
    font-weight: 500;
    font-size: 1.8rem;
    line-height: 2.5rem;
}

#main-entries-container li h3 a:link,
#main-entries-container li h3 a:visited {
    color: var(--grey-900);
    text-decoration: none;
}

#main-entries-container li #entry-id {
    padding: 0.5rem 0 0.5rem 0;
    font-family: var(--sans-serif);
    font-size: 1.6rem;
}

#main-entries-container li #entry-type {
    padding: 0.5rem 0 0.5rem 0;
}

#main-entries-container li #entry-type a:link,
#main-entries-container li #entry-type a:visited {
    font-size: 1.4rem;
}

#main-entries-container li #entry-date {
    padding: 0.5rem 0 0.5rem 0;
    font-family: var(--sans-serif);
    font-size: 1.6rem;
}

#main-entries-container li #entry-link {
    padding: 0.5rem 0 0.5rem 0;
    font-family: var(--sans-serif);
    font-size: 1.6rem;
    line-height: 2.5rem;
}

#main-entries-container li #entry-link a:link,
#main-entries-container li #entry-link a:visited {
    color: var(--grey-900);
    text-decoration: none;
}

#row-1 {
    margin: 2rem 0 0 0;
    padding: 2rem 0 0 0;
    border-top: 0.1rem solid var(--blue-grey-50);
}

ul#entry-tags {
    padding: 0 0 1rem 0;
    flex-grow: 1;
}

#entry-tags li {
    display: inline-block;
    padding: 0;
    font-family: var(--sans-serif);
}

#entry-tags li a:link,
#entry-tags li a:visited,
#entry-tags li a:hover,
#entry-tags li a:active {
    display: inline-block;
    padding: 0.5rem 1rem 0.5rem 1rem;
    font-family: var(--sans-serif);
    font-size: 1.4rem;
    color: var(--grey-900);
    text-decoration: none;
    background: var(--blue-grey-50);
    border-radius: 2rem;
}

#entry-tags li i {
    color: var(--blue-grey-600);
}

ul#index-open-entry-in {
    white-space: nowrap;
    text-align: right;
}

#index-open-entry-in li {
    display: inline-block;
    font-size: 1.6rem;
    padding: 0;
    margin: 0;
}

#index-open-entry-in a:link, 
#index-open-entry-in a:visited {
    display: inline-block;
    padding: 0.5rem 1rem 0.5rem 1rem;
    border-radius: 2rem;
}

#main-entries-container .types-list li {
    display: flex;
    align-items: center;
    padding: 0 0 1rem 0;
    font-size: 1.6rem;
    background: none;
    border-radius: 0;
    border-bottom: 0.1rem dashed var(--blue-grey-50);
}

.tags-list li {
    display: flex;
    align-items: center;
    padding: 0 0 1rem 0;
    font-size: 1.6rem;
    background: none;
    border-radius: 0;
    border-bottom: 0.1rem dashed var(--blue-grey-50);
}

.tags-list a:link,
.tags-list a:visited {
    margin: 0 0 0.5rem 0;
    display: inline-block;
    padding: 0.5rem 1rem 0.5rem 1rem;
    font-family: var(--sans-serif);
    font-size: 1.6rem;
    color: var(--grey-900);
    text-decoration: none;
    background: var(--blue-grey-50);
    border-radius: 2rem;
}

#main-entries-container .type-count {
    flex-grow: 1;
    text-align: right;
}

section#frontmatter {
    padding: 2rem;
    background: var(--blue-grey-100);
}

#section-frontmatter-container {
    padding: 2rem;
    font-family: var(--sans-serif);
    background: var(--grey-50);
    border-radius: 2rem;
}

#section-frontmatter-container li {
    padding: 0.5rem 0 0.5rem 0;
}

#section-frontmatter-container-li-row-1 {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#section-frontmatter-container li #entry-id {
    font-size: 1.6rem;
}

#section-frontmatter-container li #entry-type a:link,
#section-frontmatter-container li #entry-type a:visited {
    font-size: 1.4rem;
}

#section-frontmatter-container li#entry-date,
#section-frontmatter-container li#entry-modified {
    font-size: 1.6rem;
}

#section-frontmatter-container li#entry-reading-time {
    font-size: 1.6rem;
}

#section-frontmatter-container li#entry-link {
    font-size: 1.6rem;
    line-height: 2.5rem;
}

#section-frontmatter-container li#entry-link a:link,
#section-frontmatter-container li#entry-link a:visited {
    font-size: 1.6rem;
    color: var(--grey-900);
    text-decoration: none;
}

article#entry-content {
    padding: 2rem;
    background: var(--white);
}

#article-entry-content-container {
    font-family: var(--sans-serif);
    font-size: 1.6rem;
}

#article-entry-content-container p {
    line-height: 3rem;
}
/* ... */

